--- a/public/404.html
+++ b/public/404.html
@@ -14,27 +14,27 @@
 
 	<!-- plugins -->
 	
-	<link rel="stylesheet" href="https://antoinelpp.githube.io/plugins/bootstrap/bootstrap.min.css ">
+	<link rel="stylesheet" href="https://antoinelpp.github.io/plugins/bootstrap/bootstrap.min.css ">
 	
-	<link rel="stylesheet" href="https://antoinelpp.githube.io/plugins/themify-icons/themify-icons.css ">
+	<link rel="stylesheet" href="https://antoinelpp.github.io/plugins/themify-icons/themify-icons.css ">
 	
-	<link rel="stylesheet" href="https://antoinelpp.githube.io/plugins/magnific-popup/magnific-popup.css ">
+	<link rel="stylesheet" href="https://antoinelpp.github.io/plugins/magnific-popup/magnific-popup.css ">
 	
-	<link rel="stylesheet" href="https://antoinelpp.githube.io/plugins/slick/slick.css ">
+	<link rel="stylesheet" href="https://antoinelpp.github.io/plugins/slick/slick.css ">
 	
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anaheim%7cQuattrocento&#43;Sans:400,700&amp;display=swap ">
 	
 
 	<!-- Main Stylesheet -->
 	
-	<link rel="stylesheet" href="https://antoinelpp.githube.io/css/style.min.css" media="screen">
+	<link rel="stylesheet" href="https://antoinelpp.github.io/css/style.min.css" media="screen">
 
   <!-- Custom stylesheet - for your changes -->
   <link rel="stylesheet" href="/css/custom.css " media="screen">
 
 	<!--Favicon-->
-	<link rel="shortcut icon" href="https://antoinelpp.githube.io/images/favicon.png " type="image/x-icon">
-	<link rel="icon" href="https://antoinelpp.githube.io/images/favicon.png " type="image/x-icon">
+	<link rel="shortcut icon" href="https://antoinelpp.github.io/images/favicon.png " type="image/x-icon">
+	<link rel="icon" href="https://antoinelpp.github.io/images/favicon.png " type="image/x-icon">
 
 </head>
 
@@ -44,7 +44,7 @@
 <!-- preloader start -->
 <div class="preloader">
   
-  <img src="https://antoinelpp.githube.io/images/logo.png" alt="preloader">
+  <img src="https://antoinelpp.github.io/images/logo.png" alt="preloader">
   
 </div>
 <!-- preloader end -->
@@ -55,7 +55,7 @@
 		<nav class="navbar navbar-expand-lg navbar-dark">
 			<a class="navbar-brand p-0" href="/">
 				
-				<img class="img-fluid" src="https://antoinelpp.githube.io/images/logo.png" alt="Antoine Tavant">
+				<img class="img-fluid" src="https://antoinelpp.github.io/images/logo.png" alt="Antoine Tavant">
 				
 			</a>
 
@@ -151,8 +151,8 @@
 
 				<!-- copyright -->
 				<div class="copyright text-center">
-					<a href="https://antoinelpp.githube.io">
-						<img src="https://antoinelpp.githube.io/images/logo.png" alt="Antoine Tavant" />
+					<a href="https://antoinelpp.github.io">
+						<img src="https://antoinelpp.github.io/images/logo.png" alt="Antoine Tavant" />
 					</a>
 					<br>
 					<p>copyright &copy; 2019 <a href="https://gethugothemes.com">gethugothemes</a> all right reserved</p>
@@ -170,24 +170,24 @@
 
 <!-- JS Plugins -->
 
-<script src="https://antoinelpp.githube.io/plugins/jquery/jquery.min.js"></script>
+<script src="https://antoinelpp.github.io/plugins/jquery/jquery.min.js"></script>
 
-<script src="https://antoinelpp.githube.io/plugins/bootstrap/bootstrap.min.js"></script>
+<script src="https://antoinelpp.github.io/plugins/bootstrap/bootstrap.min.js"></script>
 
-<script src="https://antoinelpp.githube.io/plugins/slick/slick.min.js"></script>
+<script src="https://antoinelpp.github.io/plugins/slick/slick.min.js"></script>
 
-<script src="https://antoinelpp.githube.io/plugins/shuffle/shuffle.min.js"></script>
+<script src="https://antoinelpp.github.io/plugins/shuffle/shuffle.min.js"></script>
 
-<script src="https://antoinelpp.githube.io/plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
+<script src="https://antoinelpp.github.io/plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
 
-<script src="https://antoinelpp.githube.io/plugins/lazy-load/lozad.min.js"></script>
+<script src="https://antoinelpp.github.io/plugins/lazy-load/lozad.min.js"></script>
 
-<script src="https://antoinelpp.githube.io/plugins/google-map/map.js"></script>
+<script src="https://antoinelpp.github.io/plugins/google-map/map.js"></script>
 
 
 <!-- Main Script -->
 
-<script src="https://antoinelpp.githube.io/js/script.min.js"></script>
+<script src="https://antoinelpp.github.io/js/script.min.js"></script>
 
 <!-- google analitycs -->
 </body>
