--- a/fr/index.html
+++ b/fr/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Notes et pensées d&#39;un gars normal"/>
 <meta name="keywords" content=""/>
 <meta name="robots" content="noodp"/>
-<link rel="canonical" href="https://localhost:1313/fr/" />
+<link rel="canonical" href="https://antoinetavant.github.io/fr/" />
 
 
 <script>
@@ -21,14 +21,14 @@
 
 
 
-<link rel="stylesheet" href="https://localhost:1313/assets/style.css">
+<link rel="stylesheet" href="https://antoinetavant.github.io/assets/style.css">
 
 
-<link rel="stylesheet" href="https://localhost:1313/style.css">
+<link rel="stylesheet" href="https://antoinetavant.github.io/style.css">
 
 
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://localhost:1313/img/apple-touch-icon-144-precomposed.png">
-<link rel="shortcut icon" href="https://localhost:1313/img/favicon.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://antoinetavant.github.io/img/apple-touch-icon-144-precomposed.png">
+<link rel="shortcut icon" href="https://antoinetavant.github.io/img/favicon.png">
 
 
 <meta name="twitter:card" content="summary"/>
@@ -40,7 +40,7 @@
 <meta property="og:title" content="Site personnel d&#39;Antoine Cosson-Tavant" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://localhost:1313/fr/" />
+<meta property="og:url" content="https://antoinetavant.github.io/fr/" />
 <meta property="og:site_name" content="Site personnel d&#39;Antoine Cosson-Tavant" />
 
 
@@ -163,8 +163,8 @@
   </div>
 </footer>
 
-<script src="https://localhost:1313/assets/main.js"></script>
-<script src="https://localhost:1313/assets/prism.js"></script>
+<script src="https://antoinetavant.github.io/assets/main.js"></script>
+<script src="https://antoinetavant.github.io/assets/prism.js"></script>
 
 
       
